--- a/shopping-list-app/src/App.css
+++ b/shopping-list-app/src/App.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caprasimo:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Calistoga:wght@400;700&display=swap');
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(135deg, #00ff6a, #12733a66);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +51,45 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* New styles for the Button component */
+.button {
+  display: block;
+  width: 200px;
+  margin: 20px auto;
+  padding: 15px;
+  background-color: #3498db;
+  color: white;
+  text-decoration: none;
+  font-family: 'QuickSand', sans-serif;
+  font-size: 18px;
+  border-radius: 10px;
+  text-align: center;
+  transition: 0.3s;
+}
+
+.button:hover {
+  background-color: #2980b9;
+}
+
+/* New styles for the Title component */
+.title {
+  font-family: 'Montserrat', sans-serif; /* Change this to your desired font */
+  margin-bottom: 30px;
+}
+
+.title1 {
+  font-family: 'Quicksand', sans-serif; /* Change this to your desired font */
+  margin-bottom: 30px;
+}
+
+.title2 {
+  font-family: 'Caprasimo'; /* Change this to your desired font */
+  margin-bottom: 30px;
+}
+
+.title3 {
+  font-family: 'Calistoga'; /* Change this to your desired font */
+  margin-bottom: 30px;
 }
