--- a/shopping-list-app/src/AddRecipe.css
+++ b/shopping-list-app/src/AddRecipe.css
@@ -37,6 +37,10 @@
     gap: 20px; /* Add gap between flex items */
   }
   
+  .add-ingredient-button {
+    margin-left: auto;
+  }
+  
   .ingredient-row > div {
     flex: 1;
     margin-right: 10px;
